some styling on all pages

--- a/aboutUs.html
+++ b/aboutUs.html
@@ -22,15 +22,15 @@
 <body>
   <header role="banner">
     <div class="container">
-    <div class="row m-0 p-0">
-      <div class="col banner-logo">
-        <a href="index.html"><img id="logo-main" src="assets/warkot_logo.jpg" width="200" alt="Logo Thing main logo"></a>
-      </div>
+      <div class="row m-0 p-0 ">
+        <div class="col ps-3 pt-3">
+          <a href="../index.html"><img id="logo-main" class="center-logo" src="../assets/warkot_logo1.jpg" width="200" alt="warkot logo"></a>
+        </div>
 
       <div class="col text-end header-social-media">
         <ul class="social-network">
           <li><a class="text-decoration-none text-reset" href="https://www.instagram.com/vintage.brothers/?hl=pl" title="Instagram"><i class="fa fa-instagram fa-3x header-ico pe-2 pt-3"></i></a></li>
-          <li><a class="text-decoration-none text-reset" href="https://www.facebook.com/Warkot-102858851174810" title="Facebook"><i class="fa fa-facebook-square fa-3x header-ico pt-3"></i></a></li>
+          <li><a class="text-decoration-none text-reset" href="https://www.facebook.com/Warkot-102858851174810" title="Facebook"><i class="fa fa-facebook-square fa-3x header-ico pe-2 pt-3"></i></a></li>
         </ul>
       </div>
     </div>
@@ -64,21 +64,21 @@
       </div>
       <div class="col-md-6 px-2 pb-2">
         <h2 class="ps-xl-5 ps-lg-4 ps-md-2 pe-xl-5 pe-lg-4 pe-md-2 pb-xl-3 pb-lg-2 pb-md-1"><b>O NAS</b></h2>
-        <p class="page_aboutUs_font t-justify ps-xl-5 ps-lg-4 ps-md-2 pe-xl-5 pe-lg-4 pe-md-2 pb-xl-2 pb-lg-2 pb-md-1 m-0">
+        <p class="page_aboutUs_font ps-xl-5 ps-lg-4 ps-md-2 pe-0  pb-xl-2 pb-lg-2 pb-md-1 m-0">
           MACIEJ, MATEUSZ I MICHAŁ - JESTEŚMY BRAĆMI, KTÓRYCH POŁĄCZYŁA PASJA DO
           KLASYCZNEJ MOTORYZACJI, A W SZCZEGÓLNOŚCI DO STARYCH MOTOCYKLI Z PRZEŁOMU LAT 60-80 XX WIEKU.
         </p>
-        <p class="page_aboutUs_font t-justify ps-xl-5 ps-lg-4 ps-md-2 pe-xl-5 pe-lg-4 pe-md-2pb-xl-2 pb-lg-2 pb-md-1 m-0">
+        <p class="page_aboutUs_font ps-xl-5 ps-lg-4 ps-md-2 pe-0 pb-xl-2 pb-lg-2 pb-md-1 m-0">
           WSZYSTKO ZACZĘŁO SIĘ W DZIECIŃSTWIE, KIEDY TO NASI OJCOWIE ZABIERALI NAS
           NA PRZEJAŻDŻKI SWOIMI MOTOCYKLAMI. CZĘSTO TEŻ PRZYGLĄDALIŚMY SIĘ JAK JE
           NAPRAWIALI, A DŹWIĘK SILNIKA PRZYWRÓCONEGO DO ŻYCIA I ZAPACH ŚWIEŻO WLANEJ
           BENZYNY OD RAZU SPRAWIAŁ, ŻE MIELIŚMY UŚMIECH NA TWARZY.
         </p>
-        <p class="page_aboutUs_font t-justify ps-xl-5 ps-lg-4 ps-md-2 pe-xl-5 pe-lg-4 pe-md-2 pb-xl-2 pb-lg-2 pb-md-1 m-0">
+        <p class="page_aboutUs_font ps-xl-5 ps-lg-4 ps-md-2 pe-0 pb-xl-2 pb-lg-2 pb-md-1 m-0">
           ZACZĘŁO SIĘ OD MOTORYNKI I KOMARA 2351, JEŹDZILIŚMY RÓWNIEŻ NA MOTOCYKLACH
           ENDURO, A OBECNIE W GARAŻU MAMY M.IN. BMW R90/6, TRIUMPHA SCRAMBLERA 900, SUZUKI GS400.
         </p>
-        <p class="page_aboutUs_font t-justify ps-xl-5 ps-lg-4 ps-md-2 pe-xl-5 pe-lg-4 pe-md-2 pb-xl-2 pb-lg-2 pb-md-1 m-0">
+        <p class="page_aboutUs_font ps-xl-5 ps-lg-4 ps-md-2 pe-0 pb-xl-2 pb-lg-2 pb-md-1 m-0">
           NASZYM CELEM JEST BUDOWANIE WYJĄTKOWYCH I NIETUZINKOWYCH MASZYN Z DUSZĄ, KTÓRE SŁUŻĄ
           NIE TYLKO DO PRZEMIESZCZANIA SIĘ , ALE RÓWNIEŻ DAJĄ POCZUCIE WOLNOŚCI I FRAJDĘ Z JAZDY.
         </p>
