--- a/offer.html
+++ b/offer.html
@@ -22,15 +22,15 @@
 <body>
   <header role="banner">
     <div class="container">
-    <div class="row m-0 p-0">
-      <div class="col banner-logo">
-        <a href="index.html"><img id="logo-main" src="assets/warkot_logo.jpg" width="200" alt="Logo Thing main logo"></a>
-      </div>
+      <div class="row m-0 p-0 ">
+        <div class="col ps-3 pt-3">
+          <a href="../index.html"><img id="logo-main" class="center-logo" src="../assets/warkot_logo1.jpg" width="200" alt="warkot logo"></a>
+        </div>
 
       <div class="col text-end header-social-media">
         <ul class="social-network">
           <li><a class="text-decoration-none text-reset" href="https://www.instagram.com/vintage.brothers/?hl=pl" title="Instagram"><i class="fa fa-instagram fa-3x header-ico pe-2 pt-3"></i></a></li>
-          <li><a class="text-decoration-none text-reset" href="https://www.facebook.com/Warkot-102858851174810" title="Facebook"><i class="fa fa-facebook-square fa-3x header-ico pt-3"></i></a></li>
+          <li><a class="text-decoration-none text-reset" href="https://www.facebook.com/Warkot-102858851174810" title="Facebook"><i class="fa fa-facebook-square fa-3x header-ico pe-2 pt-3"></i></a></li>
         </ul>
       </div>
     </div>
@@ -60,15 +60,15 @@
 
     <div class="col-md-7 px-2 pb-2">
       <h2 class="ps-xl-0 ps-lg-4 ps-md-2 pe-xl-5 pe-lg-4 pe-md-2 pb-xl-3 pb-lg-2 pb-md-1"><b>OFERTA</b></h2>
-      <p class="page_offer_font t-justify ps-xl-0 ps-lg-4 ps-md-2 pe-xl-5 pe-lg-4 pe-md-2 pb-xl-3 pb-lg-2 pb-md-1">
+      <p class="page_offer_font t-justify ps-0 pe-xl-5 pe-lg-4 pe-md-2 pb-xl-3 pb-lg-2 pb-md-1">
         ZACHĘCAMY DO KONTAKTU ZARÓWNO POSIADACZY KLASYCZNYCH MOTOCYKLI,
         JAK I POSZUKIWACZY TAKICH SPRZĘTÓW. OFERUJEMY DWIE OPCJE WSPÓŁPRACY:
       </p>
-      <p class="page_offer_font t-justify ps-xl-0 ps-lg-4 ps-md-2 pe-xl-5 pe-lg-4 pe-md-2 pb-xl-3 pb-lg-2 pb-md-1">
+      <p class="page_offer_font t-justify ps-0 pe-xl-5 pe-lg-4 pe-md-2 pb-xl-3 pb-lg-2 pb-md-1">
         MASZ SWÓJ SPRZĘT I CHCIAŁBYŚ GO ODNOWIĆ, DAĆ MU DRUGIE ŻYCIE LUB KOMPLETNIE
         ZMODYFIKOWAĆ. ROZMAWIAMY O MOŻLIWOŚCIACH, POZNAJEMY CIEBIE I TWOJE UPODOBANIA.
         NA TEJ PODSTAWIE PROPONUJEMY CI KILKA OPCJI MODYFIKACJI – EKONOMICZNĄ, UNIWERSALNĄ
-        LUB NA WYPASIE☺<br/>
+        LUB NA WYPASIE<br/>
         WYCENA ZALEŻY OD STANU TWOJEGO SPRZĘTU, ILOŚCI I WIELKOŚCI PRZERÓBEK.
         DO KAŻDEGO PROJEKTU PODCHODZIMY INDYWIDUALNIE.
       </p>
@@ -84,10 +84,10 @@
       <img class="img-fluid" src="assets/warkot_offer_maciek.jpg" alt="">
     </div>
     <div class="col-md-7 ps-0 ps-md-1 pe-0 pe-md-2">
-      <p class="page_offer_font t-justify ps-xl-5 ps-lg-4 ps-md-2 pe-xl-5 pe-lg-4 pe-md-2 pb-xl-5 pb-lg-4 pb-md-2 pt-2 pt-md-0">
+      <p class="page_offer_font t-justify ps-xl-5 ps-lg-4 ps-md-2 pe-0 pb-xl-5 pb-lg-4 pb-md-2 pt-2 pt-md-0">
         NIE MASZ SPRZĘTU, ALE CHCIAŁBYŚ MIEĆ. NIC TRUDNEGO – POROZMAWIAMY O TWOICH OCZEKIWANIACH
         I MY ZNAJDZIEMY GO DLA CIEBIE. ZAKUPIMY I PRZETRANSPORTUJEMY DO NASZEGO GARAŻU, A PÓŹNIEJ
-        ZACZNIE SIĘ CAŁA ZABAWA ☺<br/>
+        ZACZNIE SIĘ CAŁA ZABAWA <br/><br/>
         WYCENA JEST NA TAKIEJ SAMEJ ZASADZIE JAK WYŻEJ.
       </p>
       <img class="img-fluid" src="assets/warkot_offer_rajdowiec.jpg" alt="some alt">
