--- a/warkot.html
+++ b/warkot.html
@@ -23,15 +23,15 @@
 <body>
   <header role="banner">
     <div class="container">
-    <div class="row m-0 p-0">
-      <div class="col banner-logo">
-        <a href="index.html"><img id="logo-main" src="assets/warkot_logo1.jpg" width="200" alt="Logo Thing main logo"></a>
-      </div>
+      <div class="row m-0 p-0 ">
+        <div class="col ps-3 pt-3">
+          <a href="../index.html"><img id="logo-main" class="center-logo" src="../assets/warkot_logo1.jpg" width="200" alt="warkot logo"></a>
+        </div>
 
       <div class="col text-end header-social-media">
         <ul class="social-network">
           <li><a class="text-decoration-none text-reset" href="https://www.instagram.com/vintage.brothers/?hl=pl" title="Instagram"><i class="fa fa-instagram fa-3x header-ico pe-2 pt-3"></i></a></li>
-          <li><a class="text-decoration-none text-reset" href="https://www.facebook.com/Warkot-102858851174810" title="Facebook"><i class="fa fa-facebook-square fa-3x header-ico pt-3"></i></a></li>
+          <li><a class="text-decoration-none text-reset" href="https://www.facebook.com/Warkot-102858851174810" title="Facebook"><i class="fa fa-facebook-square fa-3x header-ico pe-2 pt-3"></i></a></li>
         </ul>
       </div>
     </div>
@@ -60,14 +60,14 @@
     <div class="row">
 
       <div class="col-md-6 p-2 pb-2">
-        <h2 class="ps-xl-0 ps-lg-4 ps-md-2 pe-xl-5 pe-lg-4 pe-md-2 pb-xl-3 pb-lg-2 pb-md-1 "><b>WARKOT</b></h2>
-        <p class="page_warkot_font text-justify ps-xl-0 ps-lg-4 ps-md-2 pe-xl-5 pe-lg-4 pe-md-2 pb-xl-3 pb-lg-2 pb-md-1">
+        <h2 class="ps-0 pe-xl-5 pe-lg-4 pe-md-2 pb-xl-3 pb-lg-2 pb-md-1 "><b>WARKOT</b></h2>
+        <p class="page_warkot_font text-justify ps-0 pe-xl-5 pe-lg-4 pe-md-2 pb-xl-3 pb-lg-2 pb-md-1">
           WARKOT TO MIEJSCE, W KTÓRYM POWSTAJĄ WSZYSTKIE NASZE MASZYNY. MIEJSCE,
           W KTÓRYM LECĄ ISKRY, A W POWIETRZU CZUĆ BENZYNĘ I OLEJ. TO TUTAJ NASZE
           POMYSŁY I KONCEPCJE MAJĄ SWOJE REALNE ODZWIERCIEDLENIE. ZNAJDZIECIE NAS
           W SKIERNIEWICACH- MIĘDZY ŁODZIĄ A WARSZAWĄ.
         </p>
-        <p class="page_warkot_font text-justify ps-xl-0 ps-lg-4 ps-md-2 pe-xl-5 pe-lg-4 pe-md-2 pb-xl-3 pb-lg-2 pb-md-1">
+        <p class="page_warkot_font text-justify ps-0 pe-xl-5 pe-lg-4 pe-md-2 pb-xl-3 pb-lg-2 pb-md-1">
           INSPIRACJĄ DO BUDOWY SĄ GŁÓWNIE MOTOCYKLE Z LAT 60 I 70 XX WIEKU, W
           KTÓRYCH STAWIANO NA WYSOKIEJ JAKOŚCI MATERIAŁY I RZEMIEŚLNICZĄ PRACĘ.
           W NASZYCH PROJEKTACH ZAWSZE SKUPIAMY SIĘ NA PROSTOCIE BUDOWY I
@@ -91,7 +91,7 @@
           BRAT STYLE. ZDAJEMY SOBIE SPRAWĘ, ŻE KAŻDEGO ROKU NA RYNEK WCHODZĄ
           NOWOCZESNE MASZYNY, ALE MY SWOJĄ PRACĄ CHCEMY UDOWODNIĆ, ŻE STARSZE
           SPRZĘTY WCALE NIE NADAJĄ SIĘ NA ZŁOM! WYBIERAMY DROGĘ RECYKLINGU I
-          DAJEMY KLASYKOM DRUGIE ŻYCIE ☺
+          DAJEMY KLASYKOM DRUGIE ŻYCIE.
         </p>
 
         <img class="img-fluid" src="assets/warkot_tabliczka.jpg" alt="some alt">
