--- a/contact.html
+++ b/contact.html
@@ -22,15 +22,15 @@
 <body>
   <header role="banner">
     <div class="container">
-    <div class="row m-0 p-0">
-      <div class="col banner-logo">
-        <a href="index.html"><img id="logo-main" src="assets/warkot_logo.jpg" width="200" alt="Logo Thing main logo"></a>
-      </div>
+      <div class="row m-0 p-0 ">
+        <div class="col ps-3 pt-3">
+          <a href="../index.html"><img id="logo-main" class="center-logo" src="../assets/warkot_logo1.jpg" width="200" alt="warkot logo"></a>
+        </div>
 
       <div class="col text-end header-social-media">
         <ul class="social-network">
           <li><a class="text-decoration-none text-reset" href="https://www.instagram.com/vintage.brothers/?hl=pl" title="Instagram"><i class="fa fa-instagram fa-3x header-ico pe-2 pt-3"></i></a></li>
-          <li><a class="text-decoration-none text-reset" href="https://www.facebook.com/Warkot-102858851174810" title="Facebook"><i class="fa fa-facebook-square fa-3x header-ico pt-3"></i></a></li>
+          <li><a class="text-decoration-none text-reset" href="https://www.facebook.com/Warkot-102858851174810" title="Facebook"><i class="fa fa-facebook-square fa-3x header-ico pe-2 pt-3"></i></a></li>
         </ul>
       </div>
     </div>
@@ -60,15 +60,15 @@
   <div class="row">
     <div class="col-md text-center">
       <i class="fa fa-phone fa-5x header-ico"></i>
-      <p>555 222 444</p>
+      <div>555 222 444</div>
     </div>
     <div class="col-md text-center">
       <i class="fa fa-envelope fa-5x header-ico"></i>
-      <p>warkot@gmail.com</p>
+      <div>warkot@gmail.com</div>
     </div>
     <div class="col-md text-center">
       <a class="text-decoration-none text-reset" href="https://goo.gl/maps/SeiXgbyQ7eyPvcuB8">
-      <i class="fa fa-map-marker fa-5x header-ico"></i></a>
+      <i id="address-ico" class="fa fa-map-marker fa-5x header-ico"></i></a>
       <address> Asnyka 9/30<br/> 96-100 Skierniewice</address>
     </div>
     <div class="col-md">
