--- a/motorcycles.html
+++ b/motorcycles.html
@@ -23,15 +23,15 @@
 <body>
   <header role="banner">
     <div class="container">
-    <div class="row m-0 p-0">
-      <div class="col banner-logo">
-        <a href="index.html"><img id="logo-main" src="assets/warkot_logo.jpg" width="200" alt="Logo Thing main logo"></a>
-      </div>
+      <div class="row m-0 p-0 ">
+        <div class="col ps-3 pt-3">
+          <a href="../index.html"><img id="logo-main" class="center-logo" src="../assets/warkot_logo1.jpg" width="200" alt="warkot logo"></a>
+        </div>
 
       <div class="col text-end header-social-media">
         <ul class="social-network">
           <li><a class="text-decoration-none text-reset" href="https://www.instagram.com/vintage.brothers/?hl=pl" title="Instagram"><i class="fa fa-instagram fa-3x header-ico pe-2 pt-3"></i></a></li>
-          <li><a class="text-decoration-none text-reset" href="https://www.facebook.com/Warkot-102858851174810" title="Facebook"><i class="fa fa-facebook-square fa-3x header-ico pt-3"></i></a></li>
+          <li><a class="text-decoration-none text-reset" href="https://www.facebook.com/Warkot-102858851174810" title="Facebook"><i class="fa fa-facebook-square fa-3x header-ico pe-2 pt-3"></i></a></li>
         </ul>
       </div>
     </div>
