--- a/motorcycles/bmw-r45.html
+++ b/motorcycles/bmw-r45.html
@@ -6,7 +6,7 @@
   <meta charset="utf-8">
 
   <title>Warkot motorcycles - to historia trzech braci z pasją do motocykli starszej generacji.
-    Z pasją i zaangażowaniem realizujemy własne projekty, ale również te które zlecą nam nasi klieneci.</title>
+    Z pasją i zaangażowaniem realizujemy własne projekty, ale również te które zlecą nam nasi klienci.</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta name="description" content="The HTML5 Herald">
   <meta name="author" content="SitePoint">
@@ -62,7 +62,7 @@
 
         <p class="p-0 m-0"><i class="fa fa-long-arrow-right pe-4" aria-hidden="true"></i></i>ROCZNIK 1985</p>
         <p class="p-0 m-0"><i class="fa fa-long-arrow-right pe-4" aria-hidden="true"></i>POJEMNOŚĆ 500CC</p>
-        <div align=”justify” class="text-justify pt-4">
+        <div class="justify-t pt-4">
           Jeden z pierwszych projektów naszego garażu. Motocykl kupiony pod niemiecką granicą,
           gdzie czekał na wyrwanie z rąk handlarza samochodów. Inspiracją do jego budowy były
           maszyny z francuskiego warsztatu Blitz Motorcycles. Głównym założeniem było uzyskanie
