added real values to contact page

--- a/contact.html
+++ b/contact.html
@@ -60,16 +60,16 @@
   <div class="row">
     <div class="col-md text-center">
       <i class="fa fa-phone fa-5x header-ico"></i>
-      <div>555 222 444</div>
+      <div>663 192 593</div>
     </div>
     <div class="col-md text-center">
       <i class="fa fa-envelope fa-5x header-ico"></i>
-      <div>warkot@gmail.com</div>
+      <div>warkotpoczta@gmail.com</div>
     </div>
     <div class="col-md text-center">
       <a class="text-decoration-none text-reset" href="https://goo.gl/maps/SeiXgbyQ7eyPvcuB8">
       <i id="address-ico" class="fa fa-map-marker fa-5x header-ico"></i></a>
-      <address> Asnyka 9/30<br/> 96-100 Skierniewice</address>
+      <address> Stary Łajszczew 45a<br/> 96-330 Puszcza Mariańska</address>
     </div>
     <div class="col-md">
       <img id="motorcycle-scratch" class ="img-fluid text-end" src="assets/motorcycle_scratch3.png" alt="motocykl">
