fix flex on safari

--- a/motorcycles.html
+++ b/motorcycles.html
@@ -81,8 +81,8 @@
           <a class="text-decoration-none text-reset" href="/motorcycles/yamaha-xs400.html">
             <h2 class="moto-gallery-header pb-1 m-0">YAMAHA XS400</h2>
           </a>
-          <p class="moto-gallery-desc p0 m-0">Rocznik 1985</p>
-          <p class="moto-gallery-desc p0 m-0">Pojemność 500CC</p>
+          <p class="moto-gallery-desc p0 m-0">ROCZNIK 1977</p>
+          <p class="moto-gallery-desc p0 m-0">Pojemność 400CC</p>
         </div>
       </div>
 
@@ -94,8 +94,8 @@
           <a class="text-decoration-none text-reset" href="/motorcycles/triumph-scrambler-900.html">
             <h2 class="moto-gallery-header pb-1 m-0">TRIUMPH SCRAMBLER 900</h2>
           </a>
-          <p class="moto-gallery-desc p0 m-0">Rocznik 1985</p>
-          <p class="moto-gallery-desc p0 m-0">Pojemność 500CC</p>
+          <p class="moto-gallery-desc p0 m-0">Rocznik 2006</p>
+          <p class="moto-gallery-desc p0 m-0">Pojemność 900CC</p>
         </div>
       </div>
 
@@ -107,8 +107,8 @@
         <a class="text-decoration-none text-reset" href="/motorcycles/honda-cj250t.html">
           <h2 class="moto-gallery-header pb-1 m-0">HONDA CJ250T</h2>
         </a>
-        <p class="moto-gallery-desc p0 m-0">Rocznik 1985</p>
-        <p class="moto-gallery-desc p0 m-0">Pojemność 500CC</p>
+        <p class="moto-gallery-desc p0 m-0">Rocznik 1979</p>
+        <p class="moto-gallery-desc p0 m-0">Pojemność 250CC</p>
       </div>
     </div>
   </div>
