--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
         <img class="img-fluid" src="assets/warkot_start_triumph.jpg" alt="some alt">
       </div>
     </div>
-    <div class="row mx-0 p-0 row">
+    <div class="row mx-0 p-0 row d-flex">
 
       <div class="col-md-4 p-0">
         <div class="row">
