test resolution alert

--- a/index.html
+++ b/index.html
@@ -21,6 +21,9 @@
 </head>
 
 <body>
+  <script>
+    alert("Your screen resolution is: " + screen.width + "x" + screen.height);
+</script>
   <header role="banner">
     <div class="container">
       <div class="row m-0 p-0 ">
@@ -66,7 +69,7 @@
         <img class="img-fluid" src="assets/warkot_start_triumph.jpg" alt="some alt">
       </div>
     </div>
-    <div class="row mx-0 p-0 row d-flex">
+    <div class="row mx-0 p-0 row">
 
       <div class="col-md-4 p-0">
         <div class="row">
@@ -81,7 +84,7 @@
         </div>
       </div>
 
-      <div class="col-md-8 pe-0 ps-0 ps-md-2 pt-2 pt-md-0 d-flex align-items-stretch">
+      <div class="col-md-8 pe-0 ps-0 ps-md-2 pt-2 pt-md-0">
         <img class="img-fluid" src="assets/warkot_start_kaluza.jpg" alt="some alt">
       </div>
 
