hide youtube icon in footer

--- a/motorcycles/honda-cj250t.html
+++ b/motorcycles/honda-cj250t.html
@@ -235,7 +235,7 @@
       </div class="text-center">
 
       <ul class="social-network social-circle p-0">
-        <li><a class="icoYoutube" href="#" title="Youtube"><i class="fa fa-youtube"></i></a></li>
+        <!-- <li><a class="icoYoutube" href="#" title="Youtube"><i class="fa fa-youtube"></i></a></li> -->
         <li><a class="icoFacebook" href="https://www.facebook.com/Warkot-102858851174810" title="Facebook"><i class="fa fa-facebook"></i></a></li>
         <li><a class="icoInstagram" href="https://www.instagram.com/vintage.brothers/?hl=pl" title="Instagram"><i class="fa fa-instagram"></i></a></li>
       </ul>
