--- a/contact.html
+++ b/contact.html
@@ -69,7 +69,7 @@
     <div class="col-md text-center">
       <a class="text-decoration-none text-reset" href="https://goo.gl/maps/SeiXgbyQ7eyPvcuB8">
       <i id="address-ico" class="fa fa-map-marker fa-5x header-ico"></i></a>
-      <address> Stary Łajszczew 45a<br/> 96-330 Puszcza Mariańska</address>
+      <address> Stary Łajszczew<br/> 96-330 Puszcza Mariańska</address>
     </div>
     <div class="col-md">
       <img id="motorcycle-scratch" class ="img-fluid text-end" src="assets/motorcycle_scratch3.png" alt="motocykl">
@@ -95,7 +95,7 @@
   </div class="text-center">
 
     <ul class="social-network social-circle p-0">
-      <li><a class="icoYoutube" href="#" title="Youtube"><i class="fa fa-youtube"></i></a></li>
+      <!-- <li><a class="icoYoutube" href="#" title="Youtube"><i class="fa fa-youtube"></i></a></li> -->
       <li><a class="icoFacebook" href="https://www.facebook.com/Warkot-102858851174810" title="Facebook"><i class="fa fa-facebook"></i></a></li>
       <li><a class="icoInstagram" href="https://www.instagram.com/vintage.brothers/?hl=pl" title="Instagram"><i class="fa fa-instagram"></i></a></li>
     </ul>
