uppercase text in motorcycles

--- a/motorcycles/bmw-r45.html
+++ b/motorcycles/bmw-r45.html
@@ -63,11 +63,11 @@
         <p class="p-0 m-0"><i class="fa fa-long-arrow-right pe-4" aria-hidden="true"></i></i>ROCZNIK 1985</p>
         <p class="p-0 m-0"><i class="fa fa-long-arrow-right pe-4" aria-hidden="true"></i>POJEMNOŚĆ 500CC</p>
         <div class="justify-t pt-4">
-          Jeden z pierwszych projektów naszego garażu. Motocykl kupiony pod niemiecką granicą,
-          gdzie czekał na wyrwanie z rąk handlarza samochodów. Inspiracją do jego budowy były
-          maszyny z francuskiego warsztatu Blitz Motorcycles. Głównym założeniem było uzyskanie
-          klasycznego wyglądu motocykli z lat 50 i 60 XX wieku. Motocykl uniwersalny i niezawodny,
-          którym można pewnie podróżować po drogach asfaltowych, ale również przemierzać szutrowe bezdroża.
+          JEDEN Z PIERWSZYCH PROJEKTÓW NASZEGO GARAŻU. MOTOCYKL KUPIONY POD NIEMIECKĄ GRANICĄ,
+          GDZIE CZEKAŁ NA WYRWANIE Z RĄK HANDLARZA SAMOCHODÓW. INSPIRACJĄ DO JEGO BUDOWY BYŁY
+          MASZYNY Z FRANCUSKIEGO WARSZTATU BLITZ MOTORCYCLES. GŁÓWNYM ZAŁOŻENIEM BYŁO UZYSKANIE
+          KLASYCZNEGO WYGLĄDU MOTOCYKLI Z LAT 50 I 60 XX WIEKU. MOTOCYKL UNIWERSALNY I NIEZAWODNY,
+          KTÓRYM MOŻNA PEWNIE PODRÓŻOWAĆ PO DROGACH ASFALTOWYCH, ALE RÓWNIEŻ PRZEMIERZAĆ SZUTROWE BEZDROŻA.
         </div>
       </div>
       <div class="app1 col-md-6 m-0 p-0 pt-0 ps-md-2 ps-lg-5 pb-2">
@@ -75,19 +75,19 @@
         <h2 class="ps-4 pt-0">SPECYFIKACJA</h2>
         <ul>
           <li>
-            Silnik: kompletny serwis głowic, serwis i synchronizacja gaźników, wymiana olejów i filtrów.
+            SILNIK: KOMPLETNY SERWIS GŁOWIC, SERWIS I SYNCHRONIZACJA GAŹNIKÓW, WYMIANA OLEJÓW I FILTRÓW.
           </li>
           <li>
-            Kompletny serwis dyferencjału
+            KOMPLETNY SERWIS DYFERENCJAŁU
           </li>
           <li>
-            Serwis przedniego zawieszenia
+            SERWIS PRZEDNIEGO ZAWIESZENIA
           </li>
           <li>
-            Serwis hamulców przednich i tylnych
+            SERWIS HAMULCÓW PRZEDNICH I TYLNYCH
           </li>
           <li>
-            Wymiana łożysk tocznych w elementach eksploatacyjnych
+            WYMIANA ŁOŻYSK TOCZNYCH W ELEMENTACH EKSPLOATACYJNYCH
           </li>
         </ul>
         </p>
@@ -95,28 +95,28 @@
         <h2 class="ps-4 pt-2">MODYFIKACJE</h2>
         <ul>
           <li>
-            Czarne elementy motocykla pomalowane proszkowo
+            CZARNE ELEMENTY MOTOCYKLA POMALOWANE PROSZKOWO
           </li>
           <li>
-            Lakier marrakesh Brown z palety BMW
+             LAKIER MARRAKESH BROWN Z PALETY BMW
           </li>
           <li>
-            Ręcznie wykonane mocowania przedniej lampy
+            RĘCZNIE WYKONANE MOCOWANIA PRZEDNIEJ LAMPY
           </li>
           <li>
-            Kierownica typu bobber
+            KIEROWNICA TYPU BOBBER
           </li>
           <li>
-            Skrócona tylna część ramy
+            SKRÓCONA TYLNA CZĘŚĆ RAMY
           </li>
           <li>
-            Lampa przednia MZ ETZ 251
+            LAMPA PRZEDNIA MZ ETZ 251
           </li>
           <li>
-            Opony Avon MKII
+            OPONY AVON MKII
           </li>
           <li>
-            Kierunkowskazy typu Mini Bullet
+            KIERUNKOWSKAZY TYPU MINI BULLET
           </li>
         </ul>
         </p>
