--- a/motorcycles/honda-cj250t.html
+++ b/motorcycles/honda-cj250t.html
@@ -63,12 +63,12 @@
         <p class="p-0 m-0"><i class="fa fa-long-arrow-right pe-4" aria-hidden="true"></i></i>ROCZNIK 1978</p>
         <p class="p-0 m-0"><i class="fa fa-long-arrow-right pe-4" aria-hidden="true"></i>POJEMNOŚĆ 250CC</p>
         <div class="justify-t pt-4">
-          Motocykl, który wymagał od nas dużo serca i cierpliwości. Kiedy go kupiliśmy nie odpalał,
-          a jego ówczesny właściciel najzwyczajniej nie miał czasu, aby przywrócić go do sprawności.
-          Zbudowany i inspirowany motocyklami z japońskiego garażu brat style. Prostota budowy i
-          łatwość obsługi to największe zalety tego motocykla. Wystarczy jeden kopniak w starter nożny,
-          aby mały dwucylindrowiec obudził się do życia. Ponadczasowa sylwetka i chromowane szprychowe
-          koła świetnie dopełnią wygląd każdego motocyklisty, który lubi z klasą poruszać się z punktu A do punktu B.
+          MOTOCYKL, KTÓRY WYMAGAŁ OD NAS DUŻO SERCA I CIERPLIWOŚCI. KIEDY GO KUPILIŚMY NIE ODPALAŁ,
+          A JEGO ÓWCZESNY WŁAŚCICIEL NAJZWYCZAJNIEJ NIE MIAŁ CZASU, ABY PRZYWRÓCIĆ GO DO SPRAWNOŚCI.
+          ZBUDOWANY I INSPIROWANY MOTOCYKLAMI Z JAPOŃSKIEGO GARAŻU BRAT STYLE. PROSTOTA BUDOWY I
+          ŁATWOŚĆ OBSŁUGI TO NAJWIĘKSZE ZALETY TEGO MOTOCYKLA. WYSTARCZY JEDEN KOPNIAK W STARTER NOŻNY,
+          ABY MAŁY DWUCYLINDROWIEC OBUDZIŁ SIĘ DO ŻYCIA. PONADCZASOWA SYLWETKA I CHROMOWANE SZPRYCHOWE
+          KOŁA ŚWIETNIE DOPEŁNIĄ WYGLĄD KAŻDEGO MOTOCYKLISTY, KTÓRY LUBI Z KLASĄ PORUSZAĆ SIĘ Z PUNKTU A DO PUNKTU B.
         </div>
       </div>
       <div class="app1 col-md-6 m-0 p-0 pt-0 ps-md-2 ps-lg-5 pb-2">
@@ -76,24 +76,25 @@
         <h2 class="ps-4 pt-0">SPECYFIKACJA</h2>
         <ul>
           <li>
-            Silnik:  kompletny serwis głowicy, serwis i synchronizacja gaźników pod zamontowane filtry stożkowe, wymiana oleju, ustawienie zapłonu.          </li>
-          <li>
-            Wzmocniony zestaw napędowy D.I.D.
+            SILNIK:  KOMPLETNY SERWIS GŁOWICY, SERWIS I SYNCHRONIZACJA GAŹNIKÓW POD ZAMONTOWANE FILTRY STOŻKOWE, WYMIANA OLEJU, USTAWIENIE ZAPŁONU.
           </li>
           <li>
-            Serwis hamulców
+            WZMOCNIONY ZESTAW NAPĘDOWY D.I.D.
           </li>
           <li>
-            Serwis hamulców przednich i tylnych
+            SERWIS HAMULCÓW
           </li>
           <li>
-            Serwis przedniego zawieszenia
+            SERWIS HAMULCÓW PRZEDNICH I TYLNYCH
           </li>
           <li>
-            Wymiana łożysk tocznych w elementach eksploatacyjnych
+            SERWIS PRZEDNIEGO ZAWIESZENIA
           </li>
           <li>
-            Wycentrowanie kół
+            WYMIANA ŁOŻYSK TOCZNYCH W ELEMENTACH EKSPLOATACYJNYCH
+          </li>
+          <li>
+            WYCENTROWANIE KÓŁ
           </li>
         </ul>
         </p>
@@ -101,31 +102,31 @@
         <h2 class="ps-4 pt-2">MODYFIKACJE</h2>
         <ul>
           <li>
-            Czarne elementy motocykla pomalowane proszkowo
+            CZARNE ELEMENTY MOTOCYKLA POMALOWANE PROSZKOWO
           </li>
           <li>
-            Skrócona i zamknięta tylna część ramy
+            SKRÓCONA I ZAMKNIĘTA TYLNA CZĘŚĆ RAMY
           </li>
           <li>
-            Kierownica typu fatbar
+            KIEROWNICA TYPU FATBAR
           </li>
           <li>
-            Przeniesienie stacyjki pod zbiornik paliwa
+            PRZENIESIENIE STACYJKI POD ZBIORNIK PALIWA
           </li>
           <li>
-            Ręcznie wykonana puszka na akumulator i elektrykę
+            RĘCZNIE WYKONANA PUSZKA NA AKUMULATOR I ELEKTRYKĘ
           </li>
           <li>
-            Mini kierunkowskazy
+            MINI KIERUNKOWSKAZY
           </li>
           <li>
-            Przednia lampa MZ ETZ 251
+            PRZEDNIA LAMPA MZ ETZ 251
           </li>
           <li>
-            Tylna lampa LED
+            TYLNA LAMPA LED
           </li>
           <li>
-            Oryginalne lusterko sygnowane logiem Hondy z epoki
+            ORYGINALNE LUSTERKO SYGNOWANE LOGIEM HONDY Z EPOKI
           </li>
         </ul>
         </p>
