--- a/motorcycles/triumph-scrambler-900.html
+++ b/motorcycles/triumph-scrambler-900.html
@@ -63,14 +63,14 @@
         <p class="p-0 m-0"><i class="fa fa-long-arrow-right pe-4" aria-hidden="true"></i></i>ROCZNIK 2006</p>
         <p class="p-0 m-0"><i class="fa fa-long-arrow-right pe-4" aria-hidden="true"></i>POJEMNOŚĆ 900CC</p>
         <div class="justify-t pt-4">
-          Projekt, który wykonany został na Scrambler Fever Rally 2020. Triumph zjawił się na naszej
-          drodze bardzo szybko i od razu wiedzieliśmy, że musimy go mieć. Egzemplarz, który wpadł w
-          nasze ręce był delikatnie zdekompletowany, ale posiadał szprychowe koła, silnik zasilany
-          gaźnikami i był już wyposażony w kompletny układ wydechowy marki ZARD, który świetnie
-          podkreśla charakterystykę pracy tego potężnego dwucylindrowca. Celem było zbudowanie klasycznego
-          angielskiego scramblera w stylu motocykli z lat 60. Motocykl jest pozbawiony wszelkich dodatków,
-          nie posiada m in. kierunkowskazów i kontrolek. Jest zwinny i nie boi się żadnych przeszkód ani
-          najcięższego terenu. To właśnie w takich warunkach motocykl daje największą radość z jazdy.
+          PROJEKT, KTÓRY WYKONANY ZOSTAŁ NA SCRAMBLER FEVER RALLY 2020. TRIUMPH ZJAWIŁ SIĘ NA NASZEJ
+          DRODZE BARDZO SZYBKO I OD RAZU WIEDZIELIŚMY, ŻE MUSIMY GO MIEĆ. EGZEMPLARZ, KTÓRY WPADŁ W
+          NASZE RĘCE BYŁ DELIKATNIE ZDEKOMPLETOWANY, ALE POSIADAŁ SZPRYCHOWE KOŁA, SILNIK ZASILANY
+          GAŹNIKAMI I BYŁ JUŻ WYPOSAŻONY W KOMPLETNY UKŁAD WYDECHOWY MARKI ZARD, KTÓRY ŚWIETNIE
+          PODKREŚLA CHARAKTERYSTYKĘ PRACY TEGO POTĘŻNEGO DWUCYLINDROWCA. CELEM BYŁO ZBUDOWANIE KLASYCZNEGO
+          ANGIELSKIEGO SCRAMBLERA W STYLU MOTOCYKLI Z LAT 60. MOTOCYKL JEST POZBAWIONY WSZELKICH DODATKÓW,
+          NIE POSIADA M IN. KIERUNKOWSKAZÓW I KONTROLEK. JEST ZWINNY I NIE BOI SIĘ ŻADNYCH PRZESZKÓD ANI
+          NAJCIĘŻSZEGO TERENU. TO WŁAŚNIE W TAKICH WARUNKACH MOTOCYKL DAJE NAJWIĘKSZĄ RADOŚĆ Z JAZDY.
         </div>
       </div>
       <div class="app1 col-md-6 m-0 p-0 pt-0 ps-md-2 ps-lg-5 pb-2">
@@ -78,19 +78,19 @@
         <h2 class="ps-4 pt-0">SPECYFIKACJA</h2>
         <ul>
           <li>
-            Serwis i synchronizacja gaźników, wymiana oleju i filtrów
+            SERWIS I SYNCHRONIZACJA GAŹNIKÓW, WYMIANA OLEJU I FILTRÓW
           </li>
           <li>
-            Wzmocniony zestaw napędowy D.I.D
+            WZMOCNIONY ZESTAW NAPĘDOWY D.I.D
           </li>
           <li>
-            Serwis przedniego zawieszenia
+            SERWIS PRZEDNIEGO ZAWIESZENIA
           </li>
           <li>
-            Serwis hamulców
+            SERWIS HAMULCÓW
           </li>
           <li>
-            Usunięty system AIS
+            USUNIĘTY SYSTEM AIS
           </li>
         </ul>
         </p>
@@ -98,31 +98,31 @@
         <h2 class="ps-4 pt-2">MODYFIKACJE</h2>
         <ul>
           <li>
-            Skrócona i zamknięta tylna część ramy
+            SKRÓCONA I ZAMKNIĘTA TYLNA CZĘŚĆ RAMY
           </li>
           <li>
-            Zbiornik pomalowany w lakierze czarna perła
+            ZBIORNIK POMALOWANY W LAKIERZE CZARNA PERŁA
           </li>
           <li>
-            Od podstaw wykonane siedzenie” na odlewie z lekkiego materiału
+            OD PODSTAW WYKONANE SIEDZENIE” NA ODLEWIE Z LEKKIEGO MATERIAŁU
           </li>
           <li>
-            Kierownica Tomaselli
+            KIEROWNICA TOMASELLI
           </li>
           <li>
-            Aluminiowe ręcznie wykonane błotniki
+            ALUMINIOWE RĘCZNIE WYKONANE BŁOTNIKI
           </li>
           <li>
-            Aluminiowa ręcznie wykonana osłona pod silnik
+            ALUMINIOWA RĘCZNIE WYKONANA OSŁONA POD SILNIK
           </li>
           <li>
-            Aluminiowa ręcznie wykonana osłona łańcucha
+            ALUMINIOWA RĘCZNIE WYKONANA OSŁONA ŁAŃCUCHA
           </li>
           <li>
-            Kompletny układ wydechowy ZARD
+            KOMPLETNY UKŁAD WYDECHOWY ZARD
           </li>
           <li>
-            Opony Continental TKC 80
+            OPONY CONTINENTAL TKC 80
           </li>
         </ul>
         </p>
