--- a/motorcycles/yamaha-xs400.html
+++ b/motorcycles/yamaha-xs400.html
@@ -63,12 +63,12 @@
         <p class="p-0 m-0"><i class="fa fa-long-arrow-right pe-4" aria-hidden="true"></i></i>ROCZNIK 1977</p>
         <p class="p-0 m-0"><i class="fa fa-long-arrow-right pe-4" aria-hidden="true"></i>POJEMNOŚĆ 400CC</p>
         <div class="justify-t pt-4">
-          Motocykl zakupiony przez Nas jako zdekompletowany, jednak ze sporą ilością dodatkowych
-        części zamiennych. Jest to pierwszy rocznik produkcji Yamahy XS 400 2A2 z tylnym tarczowym
-        hamulcem. Celem naszej przebudowy było pokazanie sportowej natury tego motocykla, a jego
-        sylwetka miała przypominać „Flat trackery”, w których zachowuje się niezbędne minimum.
-        Zwarta i lekka konstrukcja pozwala na sprawne poruszanie się w miejskiej dżungli, ale równie
-        dobrze sprawdzi się  podczas wypadu poza miasto.
+          MOTOCYKL ZAKUPIONY PRZEZ NAS JAKO ZDEKOMPLETOWANY, JEDNAK ZE SPORĄ ILOŚCIĄ DODATKOWYCH
+        CZĘŚCI ZAMIENNYCH. JEST TO PIERWSZY ROCZNIK PRODUKCJI YAMAHY XS 400 2A2 Z TYLNYM TARCZOWYM
+        HAMULCEM. CELEM NASZEJ PRZEBUDOWY BYŁO POKAZANIE SPORTOWEJ NATURY TEGO MOTOCYKLA, A JEGO
+        SYLWETKA MIAŁA PRZYPOMINAĆ „FLAT TRACKERY”, W KTÓRYCH ZACHOWUJE SIĘ NIEZBĘDNE MINIMUM.
+        ZWARTA I LEKKA KONSTRUKCJA POZWALA NA SPRAWNE PORUSZANIE SIĘ W MIEJSKIEJ DŻUNGLI, ALE RÓWNIE
+        DOBRZE SPRAWDZI SIĘ  PODCZAS WYPADU POZA MIASTO.
         </div>
       </div>
       <div class="app1 col-md-6 m-0 p-0 pt-0 ps-md-2 ps-lg-5 pb-2">
@@ -76,19 +76,19 @@
         <h2 class="ps-4 pt-0">SPECYFIKACJA</h2>
         <ul>
           <li>
-            Silnik: nowe pierścienie tłokowe, nowe panewki korbowodowe, serwis głowicy, ostry wałek rozrządu, synchronizacja gaźników, zamontowane filtry stożkowe.
+            SILNIK: NOWE PIERŚCIENIE TŁOKOWE, NOWE PANEWKI KORBOWODOWE, SERWIS GŁOWICY, OSTRY WAŁEK ROZRZĄDU, SYNCHRONIZACJA GAŹNIKÓW, ZAMONTOWANE FILTRY STOŻKOWE.
           </li>
           <li>
-            Wzmocniony zestaw napędowy marki D.I.D.
+            WZMOCNIONY ZESTAW NAPĘDOWY MARKI D.I.D.
           </li>
           <li>
-            Serwis hamulców
+            SERWIS HAMULCÓW
           </li>
           <li>
-            Serwis przedniego zawieszenia
+            SERWIS PRZEDNIEGO ZAWIESZENIA
           </li>
           <li>
-            Wymiana łożysk tocznych w elementach eksploatacyjnych
+            WYMIANA ŁOŻYSK TOCZNYCH W ELEMENTACH EKSPLOATACYJNYCH
           </li>
         </ul>
         </p>
@@ -96,37 +96,37 @@
         <h2 class="ps-4 pt-2">MODYFIKACJE</h2>
         <ul>
           <li>
-            Czarne elementy motocykla pomalowane proszkowo
+            CZARNE ELEMENTY MOTOCYKLA POMALOWANE PROSZKOWO
           </li>
           <li>
-            Malowanie zbiornika inspirowane wyścigowymi modelami Yamahy z lat 70
+            MALOWANIE ZBIORNIKA INSPIROWANE WYŚCIGOWYMI MODELAMI YAMAHY Z LAT 70
           </li>
           <li>
-            Skrócona i zamknięta tylna część ramy
+            SKRÓCONA I ZAMKNIĘTA TYLNA CZĘŚĆ RAMY
           </li>
           <li>
-            Zmodyfikowane mocowania tylnych amortyzatorów ( motocykl jest wyższy od oryginalnego egzemplarza)
+            ZMODYFIKOWANE MOCOWANIA TYLNYCH AMORTYZATORÓW ( MOTOCYKL JEST WYŻSZY OD ORYGINALNEGO EGZEMPLARZA)
           </li>
           <li>
-            Akcesoryjne amortyzatory tylne
+            AKCESORYJNE AMORTYZATORY TYLNE
           </li>
           <li>
-            Ręcznie wykonana puszka na akumulator i elektrykę
+            RĘCZNIE WYKONANA PUSZKA NA AKUMULATOR I ELEKTRYKĘ
           </li>
           <li>
-            Przeniesienie dwustopniowej stacyjki pod siedzenie
+            PRZENIESIENIE DWUSTOPNIOWEJ STACYJKI POD SIEDZENIE
           </li>
           <li>
-            Kierownica typu bobber
+            KIEROWNICA TYPU BOBBER
           </li>
           <li>
-            Mikroprzyciski  na kierownicy
+            MIKROPRZYCISKI  NA KIEROWNICY
           </li>
           <li>
-            Ręcznie wykonane mocowania przedniej lampy
+            RĘCZNIE WYKONANE MOCOWANIA PRZEDNIEJ LAMPY
           </li>
           <li>
-            Opony Dunlop
+            OPONY DUNLOP
           </li>
         </ul>
         </p>
