hide motorcycle-scratch from tablet resolutions

--- a/contact.html
+++ b/contact.html
@@ -71,7 +71,7 @@
       <i id="address-ico" class="fa fa-map-marker fa-5x header-ico"></i></a>
       <address> Stary Łajszczew<br/> 96-330 Puszcza Mariańska</address>
     </div>
-    <div class="col-md">
+    <div class="col-md" id="motorcycle-scratch-div">
       <img id="motorcycle-scratch" class ="img-fluid text-end" src="assets/motorcycle_scratch3.png" alt="motocykl">
     </div>
   </div>
