fixes on mobiles

--- a/offer.html
+++ b/offer.html
@@ -1,6 +1,7 @@
 <!doctype html>
 
 <html lang="en">
+
 <head>
   <meta charset="utf-8">
 
@@ -27,14 +28,14 @@
           <a href="../index.html"><img id="logo-main" class="center-logo" src="../assets/warkot_logo1.jpg" width="200" alt="warkot logo"></a>
         </div>
 
-      <div class="col text-end header-social-media">
-        <ul class="social-network">
-          <li><a class="text-decoration-none text-reset" href="https://www.instagram.com/vintage.brothers/?hl=pl" title="Instagram"><i class="fa fa-instagram fa-3x header-ico pe-2 pt-3"></i></a></li>
-          <li><a class="text-decoration-none text-reset" href="https://www.facebook.com/Warkot-102858851174810" title="Facebook"><i class="fa fa-facebook-square fa-3x header-ico pe-2 pt-3"></i></a></li>
-        </ul>
+        <div class="col text-end header-social-media">
+          <ul class="social-network">
+            <li><a class="text-decoration-none text-reset" href="https://www.instagram.com/vintage.brothers/?hl=pl" title="Instagram"><i class="fa fa-instagram fa-3x header-ico pe-2 pt-3"></i></a></li>
+            <li><a class="text-decoration-none text-reset" href="https://www.facebook.com/Warkot-102858851174810" title="Facebook"><i class="fa fa-facebook-square fa-3x header-ico pe-2 pt-3"></i></a></li>
+          </ul>
+        </div>
       </div>
     </div>
-  </div>
   </header>
 
   <nav class="navbar navbar-expand-md navbar-light">
@@ -54,68 +55,76 @@
     </div>
   </nav>
 
-<!-- content -->
-<div class="container my-5">
-  <div class="row">
+  <!-- content -->
+  <div class="container my-5">
+    <div class="row">
 
-    <div class="col-md-7 px-2 pb-2">
-      <h2 class="ps-xl-0 ps-lg-4 ps-md-2 pe-xl-5 pe-lg-4 pe-md-2 pb-xl-3 pb-lg-2 pb-md-1"><b>OFERTA</b></h2>
-      <p class="page_offer_font t-justify ps-0 pe-xl-5 pe-lg-4 pe-md-2 pb-xl-3 pb-lg-2 pb-md-1">
-        ZACHĘCAMY DO KONTAKTU ZARÓWNO POSIADACZY KLASYCZNYCH MOTOCYKLI,
-        JAK I POSZUKIWACZY TAKICH SPRZĘTÓW. OFERUJEMY DWIE OPCJE WSPÓŁPRACY:
-      </p>
-      <p class="page_offer_font t-justify ps-0 pe-xl-5 pe-lg-4 pe-md-2 pb-xl-3 pb-lg-2 pb-md-1">
-        MASZ SWÓJ SPRZĘT I CHCIAŁBYŚ GO ODNOWIĆ, DAĆ MU DRUGIE ŻYCIE LUB KOMPLETNIE
-        ZMODYFIKOWAĆ. ROZMAWIAMY O MOŻLIWOŚCIACH, POZNAJEMY CIEBIE I TWOJE UPODOBANIA.
-        NA TEJ PODSTAWIE PROPONUJEMY CI KILKA OPCJI MODYFIKACJI – EKONOMICZNĄ, UNIWERSALNĄ
-        LUB NA WYPASIE<br/>
-        WYCENA ZALEŻY OD STANU TWOJEGO SPRZĘTU, ILOŚCI I WIELKOŚCI PRZERÓBEK.
-        DO KAŻDEGO PROJEKTU PODCHODZIMY INDYWIDUALNIE.
-      </p>
+      <div class="col-md-7 px-2 pb-2">
+        <h2 class="page_offer_font ps-xl-0 ps-lg-4 ps-md-2 pe-xl-5 pe-lg-4 pe-md-2 pb-xl-3 pb-lg-2 pb-md-1"><b>OFERTA</b></h2>
+        <p class="page_offer_font t-justify ps-0 pe-xl-5 pe-lg-4 pe-md-2 pb-xl-3 pb-lg-2 pb-md-1">
+          ZACHĘCAMY DO KONTAKTU ZARÓWNO POSIADACZY KLASYCZNYCH MOTOCYKLI,
+          JAK I POSZUKIWACZY TAKICH SPRZĘTÓW. OFERUJEMY DWIE OPCJE WSPÓŁPRACY:
+        </p>
+        <p class="page_offer_font t-justify ps-0 pe-xl-5 pe-lg-4 pe-md-2 pb-xl-3 pb-lg-2 pb-md-1">
+          MASZ SWÓJ SPRZĘT I CHCIAŁBYŚ GO ODNOWIĆ, DAĆ MU DRUGIE ŻYCIE LUB KOMPLETNIE
+          ZMODYFIKOWAĆ. ROZMAWIAMY O MOŻLIWOŚCIACH, POZNAJEMY CIEBIE I TWOJE UPODOBANIA.
+          NA TEJ PODSTAWIE PROPONUJEMY CI KILKA OPCJI MODYFIKACJI – EKONOMICZNĄ, UNIWERSALNĄ
+          LUB NA WYPASIE<br />
+          WYCENA ZALEŻY OD STANU TWOJEGO SPRZĘTU, ILOŚCI I WIELKOŚCI PRZERÓBEK.
+          DO KAŻDEGO PROJEKTU PODCHODZIMY INDYWIDUALNIE.
+        </p>
+
+        <p class="page_offer_font t-justify ps-0 pe-xl-5 pe-lg-4 pe-md-2 pb-xl-3 pb-lg-2 pb-md-1">
+          NIE MASZ SPRZĘTU, ALE CHCIAŁBYŚ MIEĆ. NIC TRUDNEGO – POROZMAWIAMY O TWOICH OCZEKIWANIACH
+          I MY ZNAJDZIEMY GO DLA CIEBIE. ZAKUPIMY I PRZETRANSPORTUJEMY DO NASZEGO GARAŻU, A PÓŹNIEJ
+          ZACZNIE SIĘ CAŁA ZABAWA <br />
+          WYCENA JEST NA TAKIEJ SAMEJ ZASADZIE JAK WYŻEJ.
+        </p>
+      </div>
+      <div class="col-md-5 px-0 px-md-2 pb-2">
+        <img class="img-fluid" src="assets/warkot_offer_drift.jpg" alt="some alt">
+      </div>
     </div>
-    <div class="col-md-5 px-0 px-md-2 pb-2">
-      <img class="img-fluid" src="assets/warkot_offer_drift.jpg" alt="some alt">
+
+    <div class="row d-flex align-items-end">
+
+      <div class="col-md-5 ps-0 ps-md-2 pe-0 pe-md-1">
+        <img class="img-fluid" src="assets/warkot_offer_maciek.jpg" alt="">
+      </div>
+      <div class="col-md-7 ps-0 ps-md-1 pe-0 pe-md-2">
+
+        <div class="d-flex align-items-stretch ps-0 ps-md-1 pe-0 pe-md-2 pb-2 pb-md-3 pt-2 pt-md-0">
+          <img class="img-fluid d-flex align-items-stretch" src="https://www.continental.com/resource/image/102362/landscape_stage_wide_desktop/984/342/ca126d635281910f1052372b50a39cf9/fE/20171103-aras-header.jpg" alt="some alt">
+        </div>
+        <div class="ps-0 ps-md-1 pe-0 pe-md-2">
+          <img class="img-fluid" src="assets/warkot_offer_rajdowiec.jpg" alt="some alt">
+        </div>
+      </div>
     </div>
+
   </div>
+  <!-- end of content  -->
 
-  <div class="row d-flex align-items-end">
-
-    <div class="col-md-5 ps-0 ps-md-2 pe-0 pe-md-1">
-      <img class="img-fluid" src="assets/warkot_offer_maciek.jpg" alt="">
-    </div>
-    <div class="col-md-7 ps-0 ps-md-1 pe-0 pe-md-2">
-      <p class="page_offer_font t-justify ps-xl-5 ps-lg-4 ps-md-2 pe-0 pb-xl-5 pb-lg-4 pb-md-2 pt-2 pt-md-0">
-        NIE MASZ SPRZĘTU, ALE CHCIAŁBYŚ MIEĆ. NIC TRUDNEGO – POROZMAWIAMY O TWOICH OCZEKIWANIACH
-        I MY ZNAJDZIEMY GO DLA CIEBIE. ZAKUPIMY I PRZETRANSPORTUJEMY DO NASZEGO GARAŻU, A PÓŹNIEJ
-        ZACZNIE SIĘ CAŁA ZABAWA <br/><br/>
-        WYCENA JEST NA TAKIEJ SAMEJ ZASADZIE JAK WYŻEJ.
-      </p>
-      <img class="img-fluid" src="assets/warkot_offer_rajdowiec.jpg" alt="some alt">
-    </div>
-  </div>
-
-</div>
-<!-- end of content  -->
-
-<footer>
+  <footer>
     <div class="footer">
-  <div class="text-center py-4">
-    ZNAJDZIESZ NAS:
-  </div class="text-center">
+      <div class="text-center py-4">
+        ZNAJDZIESZ NAS:
+      </div class="text-center">
 
-    <ul class="social-network social-circle p-0">
-      <!-- <li><a class="icoYoutube" href="#" title="Youtube"><i class="fa fa-youtube"></i></a></li> -->
-      <li><a class="icoFacebook" href="https://www.facebook.com/Warkot-102858851174810" title="Facebook"><i class="fa fa-facebook"></i></a></li>
-      <li><a class="icoInstagram" href="https://www.instagram.com/vintage.brothers/?hl=pl" title="Instagram"><i class="fa fa-instagram"></i></a></li>
-    </ul>
-    <div id="copyright-note">
-    &copy; Copyright 2020 Kamil Tartanus
-  </div>
-  </div>
+      <ul class="social-network social-circle p-0">
+        <!-- <li><a class="icoYoutube" href="#" title="Youtube"><i class="fa fa-youtube"></i></a></li> -->
+        <li><a class="icoFacebook" href="https://www.facebook.com/Warkot-102858851174810" title="Facebook"><i class="fa fa-facebook"></i></a></li>
+        <li><a class="icoInstagram" href="https://www.instagram.com/vintage.brothers/?hl=pl" title="Instagram"><i class="fa fa-instagram"></i></a></li>
+      </ul>
+      <div id="copyright-note">
+        &copy; Copyright 2020 Kamil Tartanus
+      </div>
+    </div>
   </footer>
 
 
 
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/js/bootstrap.bundle.min.js" integrity="sha384-ygbV9kiqUc6oa4msXn9868pTtWMgiQaeYH7/t7LECLbyPA2x65Kgf80OJFdroafW" crossorigin="anonymous"></script>
 </body>
+
 </html>
