--- a/aboutUs.html
+++ b/aboutUs.html
@@ -62,23 +62,23 @@
       <div class="col-md-6 px-0 px-md-2 pb-2">
         <img class="img-fluid" src="assets/warkot_bracia1.jpg" alt="some alt">
       </div>
-      <div class="col-md-6 px-2 pb-2">
-        <h2 class="ps-xl-5 ps-lg-4 ps-md-2 pe-xl-5 pe-lg-4 pe-md-2 pb-xl-3 pb-lg-2 pb-md-1"><b>O NAS</b></h2>
-        <p class="page_aboutUs_font ps-xl-5 ps-lg-4 ps-md-2 pe-0  pb-xl-2 pb-lg-2 pb-md-1 m-0">
+      <div class="col-md-6 px-2 pb-3 pb-md-2">
+        <h2 class="page_aboutUs_font ps-xl-5 ps-lg-4 ps-md-2 pe-xl-5 pe-lg-4 pe-md-2 pb-xl-3 pb-lg-2 pb-md-1 pt-3 pt-md-0"><b>O NAS</b></h2>
+        <p class="page_aboutUs_font ps-xl-5 ps-lg-4 ps-md-2 pe-0 pb-2 m-0">
           MACIEJ, MATEUSZ I MICHAŁ - JESTEŚMY BRAĆMI, KTÓRYCH POŁĄCZYŁA PASJA DO
           KLASYCZNEJ MOTORYZACJI, A W SZCZEGÓLNOŚCI DO STARYCH MOTOCYKLI Z PRZEŁOMU LAT 60-80 XX WIEKU.
         </p>
-        <p class="page_aboutUs_font ps-xl-5 ps-lg-4 ps-md-2 pe-0 pb-xl-2 pb-lg-2 pb-md-1 m-0">
+        <p class="page_aboutUs_font ps-xl-5 ps-lg-4 ps-md-2 pe-0 pb-2 m-0">
           WSZYSTKO ZACZĘŁO SIĘ W DZIECIŃSTWIE, KIEDY TO NASI OJCOWIE ZABIERALI NAS
           NA PRZEJAŻDŻKI SWOIMI MOTOCYKLAMI. CZĘSTO TEŻ PRZYGLĄDALIŚMY SIĘ JAK JE
           NAPRAWIALI, A DŹWIĘK SILNIKA PRZYWRÓCONEGO DO ŻYCIA I ZAPACH ŚWIEŻO WLANEJ
           BENZYNY OD RAZU SPRAWIAŁ, ŻE MIELIŚMY UŚMIECH NA TWARZY.
         </p>
-        <p class="page_aboutUs_font ps-xl-5 ps-lg-4 ps-md-2 pe-0 pb-xl-2 pb-lg-2 pb-md-1 m-0">
+        <p class="page_aboutUs_font ps-xl-5 ps-lg-4 ps-md-2 pe-0 pb-2 m-0">
           ZACZĘŁO SIĘ OD MOTORYNKI I KOMARA 2351, JEŹDZILIŚMY RÓWNIEŻ NA MOTOCYKLACH
           ENDURO, A OBECNIE W GARAŻU MAMY M.IN. BMW R90/6, TRIUMPHA SCRAMBLERA 900, SUZUKI GS400.
         </p>
-        <p class="page_aboutUs_font ps-xl-5 ps-lg-4 ps-md-2 pe-0 pb-xl-2 pb-lg-2 pb-md-1 m-0">
+        <p class="page_aboutUs_font ps-xl-5 ps-lg-4 ps-md-2 pe-0 pb-2 m-0">
           NASZYM CELEM JEST BUDOWANIE WYJĄTKOWYCH I NIETUZINKOWYCH MASZYN Z DUSZĄ, KTÓRE SŁUŻĄ
           NIE TYLKO DO PRZEMIESZCZANIA SIĘ , ALE RÓWNIEŻ DAJĄ POCZUCIE WOLNOŚCI I FRAJDĘ Z JAZDY.
         </p>
