--- a/contact.html
+++ b/contact.html
@@ -58,20 +58,20 @@
 <div class="page-content container-fluid mt-5 py-5">
   <div class="container">
   <div class="row">
-    <div class="col-md text-center">
+    <div class="col-md text-center pb-4 pb-md-0">
       <i class="fa fa-phone fa-5x header-ico"></i>
       <div>663 192 593</div>
     </div>
-    <div class="col-md text-center">
+    <div class="col-md text-center pb-4 pb-md-0">
       <i class="fa fa-envelope fa-5x header-ico"></i>
       <div>warkotpoczta@gmail.com</div>
     </div>
-    <div class="col-md text-center">
+    <div class="col-md text-center pb-4 pb-md-0">
       <a class="text-decoration-none text-reset" href="https://goo.gl/maps/SeiXgbyQ7eyPvcuB8">
       <i id="address-ico" class="fa fa-map-marker fa-5x header-ico"></i></a>
       <address> Stary Łajszczew<br/> 96-330 Puszcza Mariańska</address>
     </div>
-    <div class="col-md" id="motorcycle-scratch-div">
+    <div class="col-md pb-4 pb-md-0" id="motorcycle-scratch-div">
       <img id="motorcycle-scratch" class ="img-fluid text-end" src="assets/motorcycle_scratch3.png" alt="motocykl">
     </div>
   </div>
