--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
         </div>
       </div>
 
-      <div class="col-md-8 pe-0 ps-0 ps-md-2 pt-2 pt-md-0">
+      <div class="col-md-8 pe-0 ps-0 ps-md-2 pt-2 pt-md-0 d-flex align-items-stretch ">
         <img class="img-fluid" src="assets/warkot_start_kaluza.jpg" alt="some alt">
       </div>
 
