--- a/motorcycles.html
+++ b/motorcycles.html
@@ -58,9 +58,9 @@
   <!-- content -->
 
   <div class="container my-5">
-    <div class="row mx-3">
+    <div class="row mx-3 ">
       <!-- <div class="row row-cols-1 row-cols-sm-2 row-cols-md-4 moto"> -->
-      <div class="col-sm-6 col-md-4 col-lg-3">
+      <div class="col-sm-6 col-md-4 col-lg-3 pb-5">
         <a class="text-decoration-none text-reset" href="/motorcycles/bmw-r45.html">
           <img class="img-fluid" src="assets/motorcycles/bmw_r45/bmw_r45_1.jpg" alt="" />
         </a>
@@ -73,7 +73,7 @@
         </div>
       </div>
 
-      <div class="col-sm-6 col-md-4 col-lg-3">
+      <div class="col-sm-6 col-md-4 col-lg-3  pb-5">
         <a class="text-decoration-none text-reset" href="/motorcycles/yamaha-xs400.html">
           <img class="img-fluid" src="assets/motorcycles/yamaha_xs400/yamaha_xs400_1.jpg" alt="" />
         </a>
@@ -86,7 +86,7 @@
         </div>
       </div>
 
-      <div class="col-sm-6 col-md-4 col-lg-3">
+      <div class="col-sm-6 col-md-4 col-lg-3  pb-5">
         <a class="text-decoration-none text-reset" href="/motorcycles/triumph-scrambler-900.html">
           <img class="img-fluid" src="assets/motorcycles/triupmh_scrambler_900/triupmh_scrambler_900_1.jpg" alt="triupmh_scrambler_900" />
         </a>
@@ -99,7 +99,7 @@
         </div>
       </div>
 
-    <div class="col-sm-6 col-md-4 col-lg-3">
+    <div class="col-sm-6 col-md-4 col-lg-3  pb-5">
       <a class="text-decoration-none text-reset" href="/motorcycles/honda-cj250t.html">
         <img class="img-fluid" src="/assets/motorcycles/honda_cj250t/main_honda-cj250t.jpeg" alt="" />
       </a>
