--- a/warkot.html
+++ b/warkot.html
@@ -60,8 +60,8 @@
     <div class="row">
 
       <div class="col-md-6 p-2 pb-2">
-        <h2 class="ps-0 pe-xl-5 pe-lg-4 pe-md-2 pb-xl-3 pb-lg-2 pb-md-1 "><b>WARKOT</b></h2>
-        <p class="page_warkot_font text-justify ps-0 pe-xl-5 pe-lg-4 pe-md-2 pb-xl-3 pb-lg-2 pb-md-1">
+        <h2 class="page_warkot_font ps-0 pe-xl-5 pe-lg-4 pe-md-2 pb-xl-3 pb-lg-2 pb-md-1 "><b>WARKOT</b></h2>
+        <p class="page_warkot_font text-justify ps-0 pe-xl-5 pe-lg-4 pe-md-2 pb-xl-3 pb-lg-2 pb-md-1 ">
           WARKOT TO MIEJSCE, W KTÓRYM POWSTAJĄ WSZYSTKIE NASZE MASZYNY. MIEJSCE,
           W KTÓRYM LECĄ ISKRY, A W POWIETRZU CZUĆ BENZYNĘ I OLEJ. TO TUTAJ NASZE
           POMYSŁY I KONCEPCJE MAJĄ SWOJE REALNE ODZWIERCIEDLENIE. ZNAJDZIECIE NAS
@@ -84,7 +84,7 @@
       <div class="col-md-4 ps-0 ps-md-2 pe-0 pe-md-1 pb-2">
         <img class="img-fluid" src="assets/warkot_klucze.jpg" alt="">
       </div>
-      <div class="col-md-4 ps-1 pe-0 pe-md-1 pb-2">
+      <div class="col-md-4 ps-0 pe-0 pe-md-1 pb-2 ps-md-1">
         <p class="page_warkot_font text-justify ps-xl-5 ps-lg-4 ps-md-2 pe-xl-5 pe-lg-4 pe-md-2 pb-xl-5 pb-lg-4 pb-md-2">
           JEDNAK PRZEDE WSZYSTKIM NASZYM CELEM JEST PRZEMYCENIE DUCHA DAWNEJ
           MOTORYZACJI. BUDUJEMY MOTOCYKLE M.IN. W STYLU SCRAMBLER, FLAT TRACKER,
@@ -96,7 +96,7 @@
 
         <img class="img-fluid" src="assets/warkot_tabliczka.jpg" alt="some alt">
       </div>
-      <div class="col-md-4 ps-1 pe-0 pe-md-2 pb-2">
+      <div class="col-md-4 ps-0 pe-0 pe-md-2 pb-2 ps-md-1">
         <img class="img-fluid" src="assets/warkot_iskry.jpg" alt="some alt">
       </div>
     </div>
