fixes on tablet

--- a/motorcycles/triumph-scrambler-900.html
+++ b/motorcycles/triumph-scrambler-900.html
@@ -62,7 +62,7 @@
 
         <p class="p-0 m-0"><i class="fa fa-long-arrow-right pe-4" aria-hidden="true"></i></i>ROCZNIK 2006</p>
         <p class="p-0 m-0"><i class="fa fa-long-arrow-right pe-4" aria-hidden="true"></i>POJEMNOŚĆ 900CC</p>
-        <div class="justify-t pt-4">
+        <div class="justify-t pt-4 pb-2">
           PROJEKT, KTÓRY WYKONANY ZOSTAŁ NA SCRAMBLER FEVER RALLY 2020. TRIUMPH ZJAWIŁ SIĘ NA NASZEJ
           DRODZE BARDZO SZYBKO I OD RAZU WIEDZIELIŚMY, ŻE MUSIMY GO MIEĆ. EGZEMPLARZ, KTÓRY WPADŁ W
           NASZE RĘCE BYŁ DELIKATNIE ZDEKOMPLETOWANY, ALE POSIADAŁ SZPRYCHOWE KOŁA, SILNIK ZASILANY
