--- a/offer.html
+++ b/offer.html
@@ -59,13 +59,13 @@
   <div class="container my-5">
     <div class="row">
 
-      <div class="col-md-7 px-2 pb-2">
-        <h2 class="page_offer_font ps-xl-0 ps-lg-4 ps-md-2 pe-xl-5 pe-lg-4 pe-md-2 pb-xl-3 pb-lg-2 pb-md-1"><b>OFERTA</b></h2>
-        <p class="page_offer_font t-justify ps-0 pe-xl-5 pe-lg-4 pe-md-2 pb-xl-3 pb-lg-2 pb-md-1">
+      <div class="col-md-7 px-2">
+        <h2 class="page_offer_font pe-xl-5 pe-lg-4 pe-md-2 pb-xl-3 pb-lg-2 pb-md-2"><b>OFERTA</b></h2>
+        <p class="page_offer_font t-justify m-0 ps-0 pe-xl-5 pe-lg-4 pe-md-2 pb-xl-3 pb-lg-2 pb-md-1">
           ZACHĘCAMY DO KONTAKTU ZARÓWNO POSIADACZY KLASYCZNYCH MOTOCYKLI,
           JAK I POSZUKIWACZY TAKICH SPRZĘTÓW. OFERUJEMY DWIE OPCJE WSPÓŁPRACY:
         </p>
-        <p class="page_offer_font t-justify ps-0 pe-xl-5 pe-lg-4 pe-md-2 pb-xl-3 pb-lg-2 pb-md-1">
+        <p class="page_offer_font t-justify m-0 ps-0 pe-xl-5 pe-lg-4 pe-md-2 pb-xl-3 pb-lg-2 pb-md-2">
           MASZ SWÓJ SPRZĘT I CHCIAŁBYŚ GO ODNOWIĆ, DAĆ MU DRUGIE ŻYCIE LUB KOMPLETNIE
           ZMODYFIKOWAĆ. ROZMAWIAMY O MOŻLIWOŚCIACH, POZNAJEMY CIEBIE I TWOJE UPODOBANIA.
           NA TEJ PODSTAWIE PROPONUJEMY CI KILKA OPCJI MODYFIKACJI – EKONOMICZNĄ, UNIWERSALNĄ
@@ -74,11 +74,10 @@
           DO KAŻDEGO PROJEKTU PODCHODZIMY INDYWIDUALNIE.
         </p>
 
-        <p class="page_offer_font t-justify ps-0 pe-xl-5 pe-lg-4 pe-md-2 pb-xl-3 pb-lg-2 pb-md-1">
+        <p class="page_offer_font t-justify m-0 ps-0 pe-xl-5 pe-lg-4 pe-md-2 pb-xl-3 pb-lg-2 pb-md-2">
           NIE MASZ SPRZĘTU, ALE CHCIAŁBYŚ MIEĆ. NIC TRUDNEGO – POROZMAWIAMY O TWOICH OCZEKIWANIACH
           I MY ZNAJDZIEMY GO DLA CIEBIE. ZAKUPIMY I PRZETRANSPORTUJEMY DO NASZEGO GARAŻU, A PÓŹNIEJ
-          ZACZNIE SIĘ CAŁA ZABAWA <br />
-          WYCENA JEST NA TAKIEJ SAMEJ ZASADZIE JAK WYŻEJ.
+          ZACZNIE SIĘ CAŁA ZABAWA
         </p>
       </div>
       <div class="col-md-5 px-0 px-md-2 pb-2">
@@ -91,7 +90,7 @@
       <div class="col-md-5 ps-0 ps-md-2 pe-0 pe-md-1">
         <img class="img-fluid" src="assets/warkot_offer_maciek.jpg" alt="">
       </div>
-      <div class="col-md-7 ps-0 ps-md-1 pe-0 pe-md-2">
+      <div class="col-md-7 ps-0 ps-md-1 pe-0">
 
         <div class="d-flex align-items-stretch ps-0 ps-md-1 pe-0 pe-md-2 pb-2 pb-md-3 pt-2 pt-md-0">
           <img class="img-fluid d-flex align-items-stretch" src="https://www.continental.com/resource/image/102362/landscape_stage_wide_desktop/984/342/ca126d635281910f1052372b50a39cf9/fE/20171103-aras-header.jpg" alt="some alt">
