test iphone flex element

--- a/index.html
+++ b/index.html
@@ -86,6 +86,11 @@
       </div>
 
     </div>
+    <div class="row" style="background-color:red">
+      <div class="col-md-12">
+        a
+      </div>
+    </div>
   </div>
   <!-- end of content  -->
 
