--- a/index.html
+++ b/index.html
@@ -84,12 +84,9 @@
       <div class="col-md-8 pe-0 ps-0 ps-md-2 pt-2 pt-md-0 d-flex align-items-stretch ">
         <img class="img-fluid" src="assets/warkot_start_kaluza.jpg" alt="some alt">
       </div>
-
-    </div>
-    <div class="row" style="background-color:red">
-      <div class="col-md-12">
-        a
+      <div style="height: 0px">
       </div>
+
     </div>
   </div>
   <!-- end of content  -->
