--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
       </div>
 
       <div class="col-md-8 pe-0 ps-0 ps-md-2 pt-2 pt-md-0 d-flex align-items-stretch ">
-        <img class="img-fluid" src="assets/warkot_start_kaluza.jpg" alt="some alt">
+        <img class="img-fluid flex-shrink" src="assets/warkot_start_kaluza.jpg" alt="some alt">
       </div>
       <div style="height: 0px">
       </div>
