--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
         <img class="img-fluid" src="assets/warkot_start_triumph.jpg" alt="some alt">
       </div>
     </div>
-    <div class="row mx-0 p-0 row">
+    <div class="row mx-0 p-0 row flex-direction">
 
       <div class="col-md-4 p-0">
         <div class="row">
@@ -84,9 +84,6 @@
       <div class="col-md-8 pe-0 ps-0 ps-md-2 pt-2 pt-md-0 d-flex align-items-stretch ">
         <img class="img-fluid flex-shrink" src="assets/warkot_start_kaluza.jpg" alt="some alt">
       </div>
-      <div style="height: 0px">
-      </div>
-
     </div>
   </div>
   <!-- end of content  -->
