--- a/index.html
+++ b/index.html
@@ -60,16 +60,16 @@
   <!-- content -->
   <div class="container my-5 p-0">
     <!-- <div class="row mx-3"> -->
-    <div class="row mx-0 p-0 pb-2">
+    <div class="row flex-row mx-0 p-0 pb-2">
 
       <div class="col p-0">
         <img class="img-fluid" src="assets/warkot_start_triumph.jpg" alt="some alt">
       </div>
     </div>
-    <div class="row mx-0 p-0 row flex-direction">
+    <div class="row mx-0 p-0 row flex-row flex-direction">
 
       <div class="col-md-4 p-0">
-        <div class="row">
+        <div class="row flex-row">
           <div class="col-md-12 pb-2">
 
             <img class="img-fluid" src="assets/warkot_start_silnik.jpg" alt="">
