--- a/testflex.html
+++ b/testflex.html
@@ -1,69 +1,120 @@
-<!DOCTYPE html>
-<html>
-  <head>
-    <meta charset="utf-8">
-    <title>Flexbox 0 — starting code</title>
-    <style>
-      html {
-        font-family: sans-serif;
-      }
+<!doctype htmlnavbar>
 
-      body {
-        margin: 0;
-      }
+<html lang="en">
 
-      header {
-        background: purple;
-        height: 100px;
-      }
+<head>
+  <meta charset="utf-8">
 
-      h1 {
-        text-align: center;
-        color: white;
-        line-height: 100px;
-        margin: 0;
-      }
+  <title>The HTML5 Herald</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta name="description" content="The HTML5 Herald">
+  <meta name="author" content="SitePoint">
 
-      article {
-        padding: 10px;
-        margin: 10px;
-        background: aqua;
-      }
-
-      /* Add your flexbox CSS below here */
-
-      section {
-        display: flex;
-      }
+  <link rel='shortcut icon' type='image/x-icon' href='/assets/warkot.ico' />
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-giJF6kkoqNQ00vy+HMDP7azOuL0xtbfIcaT9wjKHr8RbDVddVHyTfAAsrekwKmP1" crossorigin="anonymous">
+  <link rel="stylesheet" href="assets/css/styles.css?v=1.0">
+  <link rel="stylesheet" href="assets/css/footer.css?v=1.0">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+  <link rel="preconnect" href="https://fonts.gstatic.com">
+  <link href="https://fonts.googleapis.com/css2?family=Barlow+Condensed:wght@500&display=swap" rel="stylesheet">
 
 
-    </style>
-  </head>
-  <body>
-    <header>
-      <h1>Sample flexbox example</h1>
-    </header>
+  <style>
+  .row::before, .row::after {
+    display: inline-block !important;
+    content: ' ' !important;
+  }
+  </style>
+</head>
 
-    <section>
-      <article>
-        <h2>First article</h2>
+<body>
+  <header role="banner">
+    <div class="container">
+      <div class="row m-0 p-0 ">
+        <div class="col ps-3 pt-3">
+          <a href="../index.html"><img id="logo-main" class="center-logo" src="../assets/warkot_logo1.jpg" width="200" alt="warkot logo"></a>
+        </div>
 
-        <p>Tacos actually microdosing, pour-over semiotics banjo chicharrones retro fanny pack portland everyday carry vinyl typewriter. Tacos PBR&B pork belly, everyday carry ennui pickled sriracha normcore hashtag polaroid single-origin coffee cold-pressed. PBR&B tattooed trust fund twee, leggings salvia iPhone photo booth health goth gastropub hammock.</p>
-      </article>
+        <div class="col text-end header-social-media">
+          <ul class="social-network">
+            <li><a class="text-decoration-none text-reset" href="https://www.instagram.com/vintage.brothers/?hl=pl" title="Instagram"><i class="fa fa-instagram fa-3x header-ico pe-2 pt-3"></i></a></li>
+            <li><a class="text-decoration-none text-reset" href="https://www.facebook.com/Warkot-102858851174810" title="Facebook"><i class="fa fa-facebook-square fa-3x header-ico pe-2 pt-3"></i></a></li>
+          </ul>
+        </div>
+      </div>
+    </div>
+  </header>
 
-      <article>
-        <h2>Second article</h2>
 
-        <p>Tacos actually microdosing, pour-over semiotics banjo chicharrones retro fanny pack portland everyday carry vinyl typewriter. Tacos PBR&B pork belly, everyday carry ennui pickled sriracha normcore hashtag polaroid single-origin coffee cold-pressed. PBR&B tattooed trust fund twee, leggings salvia iPhone photo booth health goth gastropub hammock.</p>
-      </article>
+  <nav class="navbar navbar-expand-md navbar-light">
+    <div class="container">
+      <!-- <a class="navbar-brand" href="#">Navbar</a> -->
+      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+      </button>
 
-      <article>
-        <h2>Third article</h2>
+      <div class="collapse navbar-collapse row" id="navbarSupportedContent">
+        <div class="col-md text-center"><a class="text-decoration-none text-reset" href="warkot.html">WARKOT</a></div>
+        <div class="col-md text-center"><a class="text-decoration-none text-reset" href="motorcycles.html">MOTOCYKLE</a></div>
+        <div class="col-md text-center"><a class="text-decoration-none text-reset" href="aboutUs.html">O NAS</a></div>
+        <div class="col-md text-center"><a class="text-decoration-none text-reset" href="offer.html">OFERTA</a></div>
+        <div class="col-md text-center"><a class="text-decoration-none text-reset" href="contact.html">KONTAKT</a></div>
+      </div>
+    </div>
+  </nav>
 
-        <p>Tacos actually microdosing, pour-over semiotics banjo chicharrones retro fanny pack portland everyday carry vinyl typewriter. Tacos PBR&B pork belly, everyday carry ennui pickled sriracha normcore hashtag polaroid single-origin coffee cold-pressed. PBR&B tattooed trust fund twee, leggings salvia iPhone photo booth health goth gastropub hammock.</p>
 
-        <p>Cray food truck brunch, XOXO +1 keffiyeh pickled chambray waistcoat ennui. Organic small batch paleo 8-bit. Intelligentsia umami wayfarers pickled, asymmetrical kombucha letterpress kitsch leggings cold-pressed squid chartreuse put a bird on it. Listicle pickled man bun cornhole heirloom art party.</p>
-      </article>
-    </section>
-  </body>
+  <!-- content -->
+  <div class="container my-5 p-0">
+    <!-- <div class="row mx-3"> -->
+    <div class="row flex-row mx-0 p-0 pb-2">
+
+      <div class="col p-0">
+        <img class="img-fluid" src="assets/warkot_start_triumph.jpg" alt="some alt">
+      </div>
+    </div>
+    <div class="row mx-0 p-0 row flex-row flex-direction">
+
+      <div class="col-md-4 p-0">
+        <div class="row flex-row">
+          <div class="col-md-12 pb-2">
+
+            <img class="img-fluid" src="assets/warkot_start_silnik.jpg" alt="">
+          </div>
+          <div class="col-md-12">
+
+            <img class="img-fluid" src="assets/warkot_start_droga.jpg" alt="">
+          </div>
+        </div>
+      </div>
+
+      <div class="col-md-8 pe-0 ps-0 ps-md-2 pt-2 pt-md-0 d-flex align-items-stretch ">
+        <img class="img-fluid flex-shrink" src="assets/warkot_start_kaluza.jpg" alt="some alt">
+      </div>
+    </div>
+  </div>
+  <!-- end of content  -->
+
+  <footer>
+    <div class="footer">
+      <div class="text-center py-4">
+        ZNAJDZIESZ NAS:
+      </div class="text-center">
+
+      <ul class="social-network social-circle p-0">
+        <!-- <li><a class="icoYoutube" href="#" title="Youtube"><i class="fa fa-youtube"></i></a></li> -->
+        <li><a class="icoFacebook" href="https://www.facebook.com/Warkot-102858851174810" title="Facebook"><i class="fa fa-facebook"></i></a></li>
+        <li><a class="icoInstagram" href="https://www.instagram.com/vintage.brothers/?hl=pl" title="Instagram"><i class="fa fa-instagram"></i></a></li>
+      </ul>
+      <div id="copyright-note">
+        &copy; Copyright 2020 Kamil Tartanus
+      </div>
+    </div>
+  </footer>
+
+
+
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/js/bootstrap.bundle.min.js" integrity="sha384-ygbV9kiqUc6oa4msXn9868pTtWMgiQaeYH7/t7LECLbyPA2x65Kgf80OJFdroafW" crossorigin="anonymous"></script>
+</body>
+
 </html>
