--- a/testflex0.html
+++ b/testflex0.html
@@ -70,14 +70,19 @@
   </section>
 
   <div style="display: flex;">
-    <div style="flex: 0 0 auto; width: 33.3333333333%;">
-      <img style="width:100%;" src="assets/warkot_start_silnik.jpg" alt="">
-      <img style="width:100%;" src="assets/warkot_start_silnik.jpg" alt="">
+    <div style=" width: 33.3333333333%;">
+    <!-- <div style="flex: 0 0 auto; width: 33.3333333333%;"> -->
+      <img style="display: border-box; width:100%;" src="assets/warkot_start_silnik.jpg" alt="">
+      <img style="display: border-box;width:100%; height:300px;" src="assets/warkot_start_silnik.jpg" alt="">
 
     </div>
-    <div style="flex: 0 0 auto; width: 66.66666666666%;">
+    <div style="display: border-box; width: 66.66666666666%;flex: 0 0 auto;">
+      <!-- <div style="display: border-box; flex: 0 0 auto; width: 66.66666666666%;"> -->
 
-      <img style="width:100%;" src="assets/warkot_start_kaluza.jpg" alt="some alt">
+      <!-- <img style="width:100%;" src="assets/warkot_start_kaluza.jpg" alt="some alt"> -->
+      <img style="width:100%; height:100%;" src="assets/warkot_start_kaluza.jpg" alt="some alt">
+      <!-- <img style="width:100%;" src="assets/warkot_start_silnik.jpg" alt=""> -->
+
     </div>
   </div>
 
