--- a/testflex0.html
+++ b/testflex0.html
@@ -77,11 +77,9 @@
 
     </div>
     <div style="display: border-box; width: 66.66666666666%;flex: 0 0 auto;">
-      <!-- <div style="display: border-box; flex: 0 0 auto; width: 66.66666666666%;"> -->
 
-      <!-- <img style="width:100%;" src="assets/warkot_start_kaluza.jpg" alt="some alt"> -->
-      <img style="width:100%; height:100%;" src="assets/warkot_start_kaluza.jpg" alt="some alt">
-      <!-- <img style="width:100%;" src="assets/warkot_start_silnik.jpg" alt=""> -->
+      <!-- <img style="width:100%; height:100%;" src="assets/warkot_start_kaluza.jpg" alt="some alt"> -->
+      <img style="width:100%;" src="assets/warkot_start_kaluza.jpg" alt="some alt">
 
     </div>
   </div>
