--- a/index0.html
+++ b/index0.html
@@ -82,7 +82,8 @@
       </div>
 
       <div class="col-md-8 pe-0 ps-0 ps-md-2 pt-2 pt-md-0 d-flex align-items-stretch ">
-        <img style="width:100% !important; height:100%" src="assets/warkot_start_kaluza.jpg" alt="some alt">
+        <img style="width:100% !important;" src="assets/warkot_start_kaluza.jpg" alt="some alt">
+        <!-- <img style="width:100% !important; height:100%" src="assets/warkot_start_kaluza.jpg" alt="some alt"> -->
       </div>
     </div>
   </div>
